fix(notification): sonar code smell fix